--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "CI=false && npm install && npx prisma generate  —omit=dev && next build",
+    "build": "CI=false && npm install  —omit=dev && next build",
     "start": "next start",
     "lint": "next lint"
   },
