--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "next": "15.0.4",
     "next-themes": "^0.4.4",
     "prisma": "^6.0.1",
-    "react": "^19.0.0",
+    "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
     "sonner": "^1.7.1",
