--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "prisma": "^6.0.1",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
