--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^8.3.2",
     "zod": "^3.24.0"
   },
   "devDependencies": {
