--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "prisma": "^6.0.1",
+    "qs": "^6.13.1",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
