--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -42,6 +43,7 @@
     "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
     "recharts": "^2.14.1",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
