--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
