implement resend otp funtionality

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "qs": "^6.13.1",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-confetti": "^6.1.0",
+    "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-hook-form": "^7.54.0",
