--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@api/bkash": "file:.api/apis/bkash",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@mapbox/node-pre-gyp": "^1.0.11",
@@ -41,6 +42,7 @@
     "next": "15.0.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "node-global-storage": "^3.0.1",
     "prisma": "^6.0.1",
     "qs": "^6.13.1",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
@@ -64,6 +66,7 @@
     "@types/qs": "^6.9.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
