--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.1",
     "@mapbox/node-pre-gyp": "^1.0.11",
+    "@next/third-parties": "^15.1.3",
     "@prisma/client": "^6.0.1",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.2",
