--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-table": "^8.20.5",
+    "@tawk.to/tawk-messenger-react": "^2.0.2",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -40,7 +41,7 @@
     "date-fns": "^3.6.0",
     "input-otp": "^1.4.1",
     "lucide-react": "^0.468.0",
-    "next": "15.0.4",
+    "next": "^15.1.3",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "node-global-storage": "^3.0.1",
