--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["aamardokan", "ADTRX", "Techsoul", "করুন"]
+  "cSpell.words": ["aamardokan", "ADTRX", "Msisdn", "Techsoul", "করুন"]
 }
