--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-countup": "^6.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
@@ -70,6 +71,7 @@
     "@types/qs": "^6.9.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
