--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-table": "^8.20.5",
@@ -41,6 +43,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "input-otp": "^1.4.1",
+    "jotai": "^2.11.0",
     "lucide-react": "^0.468.0",
     "next": "^15.1.3",
     "next-auth": "^4.24.11",
@@ -57,6 +60,7 @@
     "react-hook-form": "^7.54.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-resizable-panels": "^2.1.7",
     "recharts": "^2.14.1",
     "redux-persist": "^6.0.0",
     "sonner": "^1.7.1",
