--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "node-global-storage": "^3.0.1",
+    "nodemailer": "^6.9.16",
     "prisma": "^6.0.1",
     "qs": "^6.13.1",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
@@ -72,6 +73,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/qs": "^6.9.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
